# certified-connectors-standards

./: README.md  pyproject.toml  requirements.txt
certified_connectors_standards/: __init__.py  consts.py  data_access.py  datasets.py  metrics.py  models.py  streamlit_app.py
